# cdd-rust

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  ARCHITECTURE.md  COMPLIANCE.md  Cargo.toml  DEVELOPING.md  Makefile  PUBLISH.md  PUBLISH_OUTPUT.md  README.md  TODO.md  USAGE.md  WASM.md  alpine.Dockerfile  debian.Dockerfile  dummy_openapi.yml  make.bat  prompt.md  rust-toolchain.toml  spec.json  tarpaulin.toml
.githooks/: pre-commit
.github/workflows/: ci-cargo.yml  ci.yml  release-wasm.yml  release.yml
cli/: Cargo.toml
cli/.github/workflows/: ci.yml
cli/src/: error.rs  from_openapi.rs  generator.rs  lib.rs  main.rs  mcp.rs  scaffold.rs  schema_gen.rs  serve_json_rpc.rs  server_json_rpc.rs  sync.rs  test_gen.rs  to_docs_json.rs  to_openapi.rs
core/: Cargo.toml
core/src/: codegen.rs  contract_test_generator.rs  diff.rs  error.rs  handler_generator.rs  lib.rs  oas.rs  parser.rs  patcher.rs  route_generator.rs  schema_generator.rs  strategies.rs  type_mapping.rs
core/src/classes/: diff.rs  emit.rs  mod.rs
core/src/classes/parse/: attributes.rs  extractors.rs  mod.rs  models.rs
core/src/classes/patcher/: common.rs  files.rs  mod.rs  structs.rs  workflows.rs
core/src/functions/: mod.rs  parse.rs  parse_reqwest.rs
core/src/functions/emit/: builder.rs  extractors.rs  mod.rs  parsing.rs
core/src/handler_generator/: builder.rs  extractors.rs  parsing.rs
core/src/mcp/: mod.rs  models.rs
core/src/mocks/: emit.rs  parse.rs
core/src/oas/: document.rs  mod.rs  models.rs  normalization.rs  ref_utils.rs  registry.rs  resolver.rs  routes.rs  schemas.rs  validation.rs
core/src/oas/resolver/: body.rs  mod.rs  params.rs  responses.rs  types.rs
core/src/oas/routes/: builder.rs  callbacks.rs  mod.rs  shims.rs
core/src/oas/schemas/: enums.rs  mod.rs  refs.rs  structs.rs
core/src/openapi/: emit.rs  mod.rs  patch_emit.js
core/src/openapi/parse/: document.rs  models.rs  normalization.rs  patch_models.js  patch_models2.js  patch_models3.js  ref_utils.rs  registry.rs  validation.rs
core/src/openapi/parse/resolver/: body.rs  params.rs  patch_params.js  patch_params2.js  responses.rs  types.rs
core/src/openapi/parse/routes/: builder.rs  callbacks.rs  mod.rs  naming.rs  shims.rs
core/src/openapi/parse/schemas/: enums.rs  mod.rs  refs.rs  structs.rs
core/src/parser/: attributes.rs  extractors.rs  mod.rs  models.rs
core/src/patcher/: common.rs  files.rs  structs.rs  workflows.rs
core/src/routes/: emit.rs  parse.rs
core/src/strategies/: actix.rs  mod.rs  traits.rs
core/src/strategies/actix/: extractors.rs  links.rs  mod.rs  registration.rs  scaffolding.rs  testing.rs  utils.rs
core/src/strategies/axum/: extractors.rs  mod.rs  registration.rs  scaffolding.rs  testing.rs
core/src/strategies/clap_cli/: extractors.rs  mod.rs  registration.rs  scaffolding.rs  testing.rs
core/src/strategies/mcp_client/: extractors.rs  mod.rs  registration.rs  scaffolding.rs  testing.rs
core/src/strategies/mcp_server/: extractors.rs  mod.rs  registration.rs  scaffolding.rs  testing.rs
core/src/strategies/reqwest/: extractors.rs  mod.rs  scaffolding.rs  testing.rs
core/src/tests/: emit.rs
examples/: openapi.yml  parse_openapi.rs
mcp-1.0.0/: cli-gen.md  client-cli.md  client-sdk.md  sdk-gen.md  server-gen.md
mock-server-spec/mock-server/: mock-server-plan.md
openapi_generator/: Cargo.toml  Makefile
openapi_generator/examples/: simple_struct.rs
openapi_generator/src/: constructor.rs  error.rs  lib.rs  main.rs  openapi.rs
openapi_generator/src/parser/: actix.rs
output/: models.rs  openapi.yml
scripts/: build_wasm.py  test_sdk.py  test_sdk.sh  test_server.py  test_server.sh  test_server_and_client.py  test_server_and_client.sh  update_coverage.py
src/: constructor.rs  emit.rs  error.rs  from_openapi.rs  lib.rs  main.rs  openapi.rs  parse.rs  parser.rs  project.rs  project_reader.rs  to_openapi.rs
src/actix_web_mocks/: COPYING  Cargo.toml
src/diesel_mocks/: COPYING  Cargo.toml
src/diesel_mocks/src/: lib.rs
src/parser/: actix.rs  actix_parser.rs
src/project/: mod.rs  model.rs  request.rs  variable.rs
template/: actix_code.rs
tests/: from_openapi.rs  to_openapi.rs
web/: Cargo.toml  README.md  diesel.toml
web/migrations/20251204000000_create_users/: up.sql
web/src/: error.rs  idp.rs  lib.rs  main.rs  schema.rs  security.rs  validation.rs  webhooks.rs
web/src/dao/: connection.rs  factory.rs  mod.rs  users.rs
web/src/handlers/: mod.rs  pet.rs  store.rs  user.rs
web/src/models/: mod.rs
web/src/models/handlers/: mod.rs  pet.rs  store.rs  user.rs
web/src/models/users/: generated.rs  mod.rs
web/src/seeder/: mod.rs
web/tests/: model_integrity.rs
