[package]
name = "cdd_rust"
version = "0.1.0"
authors = ["Agustin Chiappe Berrini <agustin@auvik.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
url = "1.5.1"
colored = "1.7"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
openapiv3 = "0.3"
proc-macro2 = { version = "0.4.27", features = ["span-locations"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
syn = { version = "0.15.29", features = ["parsing", "full", "extra-traits", "visit"] }

[[bin]]
name = "cdd-rust"
path = "src/main.rs"
