[package]
name = "cdd-rust"
version = "0.1.0"
edition = "2021"
authors = ["Samuel Marks"]
description = "OpenAPI ↔ Rust"
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["openapi", "actix", "actix-web", "diesel", "rest", "orm"]
categories = [
    "development-tools",
    "development-tools::testing",
    "parser-implementations",
    "template-engine",
    "web-programming::http-server"
]

[toolchain]
channel = "nightly"

[dependencies]
actix-web = "4.5.1"
clap = { version = "4.5.1", features = ["derive"] }
derive_more = "0.99.17"
diesel = { version = "2.1.5", features = ["postgres"] }
dotenvy = "0.15.7"
heck = "0.5.0"
indexmap = { version = "2.2.6", features = ["serde"] }
openapiv3 = "2.0.0"
prettyplease = "0.2.19"
proc-macro2 = "1.0.79"
quote = "1.0.35"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
syn = { version = "2.0.52", features = ["full", "visit"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.10.1"
