[package]
name = "cdd-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cdd-core = { path = "../core" }
clap = { version = "^4", features = ["derive"] }
dsync = "^0.1"
walkdir = "^2.5"
derive_more = { version = "^2.1", features = ["from", "display"] }
serde_json = { version = "^1", features = ["preserve_order"] }
serde_yaml = "^0.9"

[dev-dependencies]
tempfile = "^3"
