[package]
name = "cdd-cli"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "cdd-rust"
path = "src/main.rs"

[dependencies]
cdd-core = { path = "../core" }
clap = { version = "^4", features = ["derive", "env"] }
dsync = "^0.1"
walkdir = "^2.5"
derive_more = { version = "^2.1", features = ["from", "display"] }
serde_json = { version = "^1", features = ["preserve_order"] }
serde_yaml = "^0.9"
serde = { version = "1.0.228", features = ["derive"] }
ureq = { version = "3", optional = true }
actix-web = { version = "4", optional = true, default-features = false }
actix-rt = { version = "2", optional = true, default-features = false }
tokio = { version = "1", optional = true, default-features = false }

[dev-dependencies]
tempfile = "^3"
[lints]
workspace = true

[features]
default = ["server", "client"]
server = ["actix-web", "actix-rt", "tokio"]
client = ["ureq"]
