[package]
name = "openapi_generator"
version = "0.1.0"
authors = ["Agustin Chiappe Berrini <agustin@auvik.com>"]
edition = "2018"

[dependencies]
colored = "1.7"
proc-macro2 = { version = "0.4.27", features = ["span-locations"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
syn = { version = "0.15.29", features = ["parsing", "full", "extra-traits", "visit"] }
