[package]
name = "cdd-web"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.4"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
actix-multipart = "0.7.2"
serde_json = "1.0.149"
[lints]
workspace = true
