[package]
name = "cdd-web"
version = "0.0.3"
edition = "2021"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
actix-web = "4.4"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
actix-multipart = "0.7.2"
serde_json = "1.0.149"

[lints]
workspace = true

[dependencies]
actix-cors = "0.7.1"
actix-web-httpauth = "0.8.2"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["display", "from", "error"] }
diesel = { version = "2.1", features = ["sqlite"] }
fake = "5.1.0"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["json"] }

[dev-dependencies]
httpmock = "0.8.3"
urlencoding = "2.1.3"
